--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: A stylish full-width masonry grid theme.
-description: Board is a stylish full-width masonry grid theme. Made for designers, artists, photographers and developers to show off their best work.
+title: Franck Ratier Design Studio
+description: Bespoke contemporary furniture for the most exclusive interiors.
 featured_image: /images/social.jpg
 ---
 
